# kvasir

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml  test.py
agents/: Dockerfile  pyproject.toml
agents/scripts/: run_kvasir_v1.py
agents/src/kvasir_agents/agents/v1/: base_agent.py  broker.py  callbacks.py  history_processors.py  shared_tools.py
agents/src/kvasir_agents/sandbox/: abstract.py  local.py  modal.py
agents/src/kvasir_agents/utils/: agent_utils.py  code_utils.py  redis_utils.py
api/: Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 1577bd1ae513_initial_database_schema.py  170d75a6bcd0_add_pipeline_models.py  1bd9c7146ba7_updates_from_merge.py  284caa5b8bc0_chatbot_with_analysis.py  2cd1e68c9e03_reset_db.py  2ecaab5a7369_init_db.py  306da081eeb9_add_not_null_constraints.py  31da6f277b72_add_run_schedule_to_pipeline.py  3a8db8ff35ff_project_foreign_key_in_context.py  4056b52a399b_init_db.py  463353338d1a_add_project_data_source_table.py  467773eb8e40_add_missing_models.py  4b44e9783bb0_init_db.py  5edb3b243e87_added_modeljobs_table.py  60c7bab70a03_create_all_tables.py  63c865e3ffd9_rename_full_name_to_name.py  6d752a6d7009_init_db.py  703d3dff0b78_make_feature_unit_optional.py  8b1f64068c37_.py  90e4ee9b3071_update_data_integration_models.py  9502571c4651_add_eda_tables.py  968b52ad3902_new_context_management.py  a80c17131916_readd_user_id_to_conv_and_run.py  a859ce613d67_node_structure_added.py  a94fbd27b757_add_project_data_source_table.py  ac5314e17791_update_automation_and_add_model_.py  b3017c919eaa_foreign_key_to_analysis_and_dataset.py  b317f7d96f1c_update_chat_models.py  b379de9583c5_name_added_to_analysis.py  b41be32e9e91_initial_database_schema.py  b87d83070867_update_orchestrator_models.py  bf9e48508a30_.py  cc63914dbb03_project.py  cecefa0f2f78_add_user_id_to_pipeline.py  cfea5491883a_job_id_for_dataset.py  d56cd4b88ae3_add_userid_col_to_ts_dataset.py  e048eb9e6b84_status_updates_for_analysis.py  e1907874949e_chat_message_with_context.py  e23adaa9fef7_create_schemas.py  e531a9a1afb0_float_position_node.py  (+9 more)
api/src/kvasir_api/: main.py  redis.py
api/src/kvasir_api/auth/: models.py  router.py  schema.py  service.py
api/src/kvasir_api/aws/: config.py  service.py
api/src/kvasir_api/database/: core.py  service.py
api/src/kvasir_api/modules/analysis/: models.py  router.py  service.py
api/src/kvasir_api/modules/codebase/: router.py  service.py
api/src/kvasir_api/modules/data_objects/: models.py  router.py  service.py
api/src/kvasir_api/modules/data_sources/: models.py  router.py  service.py
api/src/kvasir_api/modules/entity_graph/: __init__.py  models.py  router.py  service.py
api/src/kvasir_api/modules/kvasir_v1/: callbacks.py  models.py  router.py
api/src/kvasir_api/modules/model/: models.py  router.py  service.py
api/src/kvasir_api/utils/: pydanticai_utils.py  rag_utils.py
api/src/synesis_api/: base_schema.py  celery.py  main.py  redis.py  utils.py  worker.py
api/src/synesis_api/agents/swe/: agent.py  (+7 more)
api/src/synesis_api/analysis/: models.py  router.py  service.py
api/src/synesis_api/auth/: models.py  router.py  schema.py  service.py
api/src/synesis_api/automation/: models.py  router.py  schema.py  service.py
api/src/synesis_api/aws/: config.py  s3_auth.py  service.py
api/src/synesis_api/aws_auth/: service.py
api/src/synesis_api/chat/: models.py  router.py  schema.py  service.py
api/src/synesis_api/data_integration/: models.py  router.py  schema.py  service.py
api/src/synesis_api/database/: core.py  service.py
api/src/synesis_api/eda/: models.py  router.py  schema.py  service.py
api/src/synesis_api/model/: models.py  router.py  schema.py  service.py
api/src/synesis_api/modeling/: models.py  schema.py
api/src/synesis_api/ontology/: models.py  router.py  schema.py  service.py
api/src/synesis_api/project_spec/: schema.py
api/src/synesis_api/redis/: core.py
api/src/synesis_api/shared/: models.py  router.py  schema.py  service.py
api/src/synesis_api/storage/: local.py
api/src/synesis_api/utils/: code_utils.py  file_utils.py  markdown_utils.py  pydanticai_utils.py  rag_utils.py  time_series_utils.py
api/tests/: test_chatbot_interactive.py  test_file_editing_tools.py  test_github.py  test_model_integration.py
data_interface/: pyproject.toml
data_interface/src/synesis_data_interface/sources/: overview.py
data_interface/src/synesis_data_interface/structures/: __init__.py  overview.py  serialization.py  synthetic.py  utils.py  validation.py
kvasir-app/main_server/server/: pyproject.toml
kvasir-app/main_server/server/alembic/: env.py
kvasir-app/main_server/server/tests/: test_file_editing_tools.py
project_server/: Dockerfile  pyproject.toml  run.sh
project_server/docker/: Dockerfile.dev  docker-compose-dev.yaml  docker-compose.yaml
project_server/proxy/: nginx-dev.conf  nginx-prod.conf
project_server/sandbox/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  pyproject.toml
project_server/server/: Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml  run.sh
project_server/server/notebooks/: forecasting.ipynb
project_server/server/src/project_server/: auth.py  file_manager.py  main.py  redis.py  worker.py
project_server/server/weights/859e510c-8957-4aee-9bc6-9a3b905c315b/: Road_000.pkl  Road_001.pkl  Road_002.pkl  Road_003.pkl  Road_004.pkl
project_server/server/weights/d90d48a3-318f-47d8-bde0-28b2b2147be4/: Road_000.pkl  Road_001.pkl  Road_002.pkl  Road_003.pkl  Road_004.pkl
project_server/src/project_server/: client.py  main.py
project_server/src/project_server/data_source_manager/: abstract_data_source_manager.py
project_server/src/project_server/dataset_manager/: abstract_dataset_manager.py
sandbox/: Dockerfile  pyproject.toml
sandbox/src/sandbox/: integration_tools.py  tools.py
src/kvasir_research/sandbox/: Dockerfile  abstract.py  local.py  modal.py  pyproject.toml
(+1342 files in other folders)
