[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synesis"
version = "0.1.0"
description = "Multi-agent system for AI engineering automation"
authors = [
    { name = "Eirik Drage Steen", email = "eirik.drage.steen@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "argparse",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "tqdm",
    "transformers",
    "datasets",
    "pandas",
    "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["synesis"]