[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synesis"
version = "0.1.0"
description = "Synesis project"
requires-python = ">=3.11"
dependencies = [
    # Add your project dependencies here
]

[tool.hatch.build.targets.wheel]
packages = ["sandbox", "api"] 