[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvasir-agents"
version = "0.1.0"
description = "Kvasir Agents"
authors = [
    { name = "Eirik Drage Steen", email = "eirik.drage.steen@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "argparse",
    "matplotlib",
    "seaborn",
    "pandas",
    "scipy",
    "openai",
    "pydantic",
    "instructor",
    "pydantic-ai",
    "statsmodels",
    "docker",
    "pylint",
    "google-generativeai",
    "pyarrow",
    "redis",
    "taskiq[reload]",
    "taskiq-redis",
    "modal"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["kvasir_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"