[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synesis-api"
version = "0.1.0"
description = "API for Synesis"
authors = [
    { name = "Eirik Drage Steen", email = "eirik.drage.steen@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "argparse",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "tqdm",
    "transformers",
    "datasets",
    "pandas",
    "scipy",
    "openai",
    "pydantic",
    "instructor",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "fastapi[standard]",
    "uvicorn",
    "pydantic-ai",
    "psycopg2-binary",
    "sqlalchemy-utils",
    "PyJWT",
    "passlib[bcrypt]",
    "httpx",
    "aiofiles",
    "alembic",
    "redis",
    "celery",
    "statsmodels",
    "markdown2",
    "boto3",
    "openpyxl",
    "taskiq"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["synesis_api"]