[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synesis-data-interface"
version = "0.1.0"
description = "Data interface for Synesis"
authors = [
    { name = "Eirik Drage Steen", email = "eirik.drage.steen@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "typing-extensions>=4.0.0",
    "pyarrow>=5.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["synesis_data_interface"] 