[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox"
version = "0.1.0"
description = "Sandbox for LLM code execution"
authors = [
    { name = "Eirik Drage Steen", email = "eirik.drage.steen@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "httpx",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sandbox"]