[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox"
version = "0.1.0"
description = "Sandbox"
authors = [
    { name = "Eirik Drage Steen", email = "eirik.drage.steen@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    
    # Core ML/AI packages
    "numpy",
    "torch",
    "pandas",
    "scikit-learn",
    "transformers",
    "xgboost",
    "lightgbm",
    "catboost",
    "tensorflow",
    "keras",
    
    # Image processing & computer vision
    "pillow",
    "opencv-python",
    "imageio",
    "scikit-image",
    "albumentations",
    
    # Text processing & NLP
    "nltk",
    "spacy",
    "gensim",
    "textblob",
    "regex",
    "beautifulsoup4",
    "langdetect",
    "sentence-transformers",
    "wordcloud",
    
    # Data processing & utilities
    "scipy",
    "statsmodels",
    "arch",
    "prophet",
    "tslearn",
    "pyts",
    "tsfresh",
    "feature-engine",
    "category-encoders",
    "pyarrow",
    
    # Time series specific packages
    "darts",
    "sktime",
    
    # Development & testing
    "pytest",
    "black",
    "flake8",
    "pylint",
    "mypy",
    
    # System & network
    "requests",
    "aiohttp",
    "docker",
    "redis",
    "psycopg2-binary",
    "sqlalchemy",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sandbox"]
