[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox"
version = "0.1.0"
description = "Sandbox"
authors = [
    { name = "Eirik Drage Steen", email = "eirik.drage.steen@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    
    # Core ML/AI packages
    "numpy",
    "torch",
    "pandas",
    "scikit-learn",
    "transformers",
    "xgboost",
    "lightgbm",
    
    # Image processing & computer vision
    "pillow",
    "opencv-python",
    "imageio",
    "scikit-image",
    
    # Text processing & NLP
    "nltk",
    "spacy",
    "regex",
    "sentence-transformers",
    
    # Data processing & utilities
    "scipy",
    "statsmodels",
    "prophet",
    "pyarrow",
    
    # Time series specific packages
    "darts",
    "sktime",
    
    # System & network
    "requests",
    "aiohttp"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sandbox"]
