[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "statsmodels",
    "torch",
    "transformers",
    "datasets",
    "pillow",
    "opencv-python-headless",
    "jupyter",
    "ipython",
    "plotly",
    "pyarrow",
    "fastparquet",
    "openpyxl",
    "h5py",
    "sqlalchemy",
    "requests"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sandbox"]

